--- a/gen3_lite_moveit_config/config/ompl_planning.yaml
+++ b/gen3_lite_moveit_config/config/ompl_planning.yaml
@@ -198,4 +198,4 @@ gripper:
     - LazyPRMstarkConfigDefault
     - SPARSkConfigDefault
     - SPARStwokConfigDefault
-    - TrajOptDefault=
+    - TrajOptDefault
