--- a/gen3_lite_moveit_config/package.xml
+++ b/gen3_lite_moveit_config/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>gen3_lite_moveit_config</name>
-  <version>0.1.0</version>
+  <version>1.0.0</version>
   <description>
      Moveit2 configuration package for Gen3 Lite
   </description>
@@ -24,6 +24,7 @@
   <exec_depend>moveit_simple_controller_manager</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>gen3_lite_description</exec_depend>
+  <exec_depend>kinova_2f_lite_description</exec_depend>
 
 
   <export>
